# fast_api_clerk_auth

./: .env.example  .env.production  .gitignore  CLERK_AUTH_FEATURES.md  Dockerfile  Dockerfile.dev  FEATURE_FLOWS.md  HOW_IT_WORKS.md  LICENSE  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: main.py
app/api/v1/: deps.py  router.py
app/api/v1/endpoints/: activity.py  admin.py  admin_accounts.py  analytics.py  api_keys.py  audit.py  auth.py  avatar_management.py  bot_protection.py  bulk_operations.py  compliance.py  devices.py  domains.py  email_change.py  email_security.py  enterprise_sso.py  geolocation.py  health.py  invitations.py  mfa.py  oauth.py  organizations.py  password_change.py  passwordless.py  rbac.py  sessions.py  users.py  webhook_management.py  webhooks.py  (+1 more)
app/core/: celery_app.py  clerk.py  config.py  exceptions.py  logging.py  permissions.py
app/db/: database.py  models.py
app/middleware/: authentication.py  rate_limit.py  request_id.py
app/models/: workspace.py
app/schemas/: auth.py  enterprise_sso.py  organization.py  passwordless.py  rbac.py  user.py  webhook.py  workspace.py
app/services/: activity_service.py  admin_account_service.py  analytics_service.py  api_key_service.py  audit_service.py  avatar_service.py  bot_protection_service.py  bulk_operations_service.py  cache_service.py  compliance_service.py  custom_roles_service.py  device_service.py  domain_service.py  email_change_service.py  email_security_service.py  email_service.py  email_service_old.py  enterprise_sso_service.py  geolocation_service.py  invitation_service.py  jwks_cache_service.py  mfa_service.py  notification_service.py  oauth_service.py  password_change_service.py  password_validator.py  rbac_service.py  security_service.py  sms_service.py  soft_delete_service.py  token_service.py  webauthn_service.py  webhook_handler.py  webhook_service.py  workspace_service.py
app/tasks/: analytics_tasks.py  cleanup_tasks.py  email_tasks.py  export_tasks.py  user_tasks.py
app/templates/emails/: account_locked.html  base.html  invitation.html  mfa_code.html  password_reset.html  security_alert.html  verification_code.html  welcome.html  welcome.txt
ghana-ludo-poc/: .gitignore
inception-test-app/: IMPLEMENTATION_PLAN.md  middleware.ts  package-lock.json  package.json
inception-test-app/app/: layout.tsx  page.tsx
inception-test-app/app/dashboard/: page.tsx
inception-test-app/app/onboarding/: page.tsx
inception-test-app/components/: ApiTester.tsx  FileUpload.tsx  LiveApiData.tsx
inception-test-app/hooks/: useApi.ts
inception-test-app/types/: index.ts
scripts/: init_db.py  start.sh  validate_config.py
(+16 files in other folders)
